@@ -1,3 +1,8 @@
+Sat Nov 30 21:22:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dir.c (dir_initialize): check unknown keywords.  [ruby-dev:47152]
+	  [Bug #8060]
+
 Sat Nov 30 18:05:38 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/win32ole/win32ole.c (hash2named_arg): correct declaration to fix
